cloudformation/02_ec2.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Cfn-lecture template for EC2

Parameters:
  Project:
    Type: String
    Default: cfn-lecture
  VPCStack:
    Type: String
    Default: cfn-lecture-vpc
  EC2AMI:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
  SSHCidrIp:
    Type: String
    Default: 255.255.255.255/32

Resources:
# ------------------------------------------------------------#
#  KeyPair
# ------------------------------------------------------------#
  NewKeyPair:
    Type: 'AWS::EC2::KeyPair'
    Properties:
      KeyName: aws-lecture-keypair

# ------------------------------------------------------------#
#  SecurityGroup
# ------------------------------------------------------------#
  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: !Sub ${Project}-sg-web created
      GroupName: !Sub ${Project}-sg-web
      VpcId:
        Fn::ImportValue: !Sub ${VPCStack}-VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHCidrIp

# ------------------------------------------------------------#
#  EC2
# ------------------------------------------------------------#
  EC2WebServer01:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref EC2AMI
      InstanceType: t2.micro
      KeyName: !Ref NewKeyPair
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          GroupSet:
           - !Ref WebSecurityGroup
          SubnetId: 
            Fn::ImportValue: !Sub ${VPCStack}-PublicSubnet1
      BlockDeviceMappings: 
        - DeviceName: "/dev/xvda"
          Ebs: 
            VolumeSize: 8
            VolumeType: "gp2"
      Tags:
        - Key: Name
          Value: !Sub ${Project}-web

Outputs:
  EC2WebServer01:
    Value: !Ref EC2WebServer01
    Export:
      Name: !Sub ${AWS::StackName}-EC2WebServer01
  WebSecurityGroup:
    Value: !Ref WebSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}-WebSecurityGroup
